--- a/phidget1125thing/pom.xml
+++ b/phidget1125thing/pom.xml
@@ -23,7 +23,7 @@
         <applicationKey>bbfad036-5ae4-47df-9cc5-99b2d130bd51</applicationKey>
 
         <!-- Replace raspberrypi with the hostname or ip address of your raspberry pi -->
-        <pi.deployment.url>scp://pi@76.125.168.99/home/pi</pi.deployment.url>
+        <pi.deployment.url>scp://pi@158.83.150.75/home/pi</pi.deployment.url>
 
         <!-- Change to no or empty to use real hardware -->
         <simulated>simulated</simulated>
@@ -96,6 +96,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        	<groupId>phidget21</groupId>
+        	<artifactId>phidget21</artifactId>
+        	<version>1.0</version>
+        	<systemPath>${basedir}\src\lib\phidget21.jar</systemPath>
+        	<scope>system</scope>
+        </dependency>
     </dependencies>
 
     <build>
